Added Impute Means

--- a/Just_the_Functions.ipynb
+++ b/Just_the_Functions.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPnB7xuCOWatmsyyvcu9QJj",
+      "authorship_tag": "ABX9TyOPhVhsWmruP87O5vI+ufdP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,6 +55,28 @@
         "  print('Tail')\n",
         "  print(df.tail().T)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def impute_means(df):\n",
+        "  \"\"\"Imputes the mean value of a column to all null values in that column\n",
+        "  \n",
+        "Missing values found,\n",
+        "Impute means to numeric cols,\n",
+        "Clean data once more.\"\"\"\n",
+        "  for col in df.columns:\n",
+        "        if df[col].isna().sum() == 0:\n",
+        "            continue\n",
+        "        if pd.api.types.is_numeric_dtype(df[col]):\n",
+        "            df[col].fillna(df[col].mean(), inplace=True)\n",
+        "  return df"
+      ],
+      "metadata": {
+        "id": "ppmimZgdCsr6"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
