Added Count The Cats

--- a/Just_the_Functions.ipynb
+++ b/Just_the_Functions.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOPhVhsWmruP87O5vI+ufdP",
+      "authorship_tag": "ABX9TyMaErW+xY/zTh/8kMA0Sbmo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -94,6 +94,27 @@
       ],
       "metadata": {
         "id": "w_VVbOzx0vKK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def count_the_cats(df):\n",
+        "    \"\"\"Prints the value counts for categorical columns in a pandas DataFrame\n",
+        "    \n",
+        "Meow, count the cats,\n",
+        "Categorical values,\n",
+        "Pandas purrs content.\n",
+        "    \"\"\"\n",
+        "    for column in df.select_dtypes(include=[\"category\", \"object\"]).columns:\n",
+        "        print(f\"Value counts for {column}:\")\n",
+        "        print(df[column].value_counts())\n",
+        "        print(\"\\n\")"
+      ],
+      "metadata": {
+        "id": "nVhq9bRxFmIB"
       },
       "execution_count": null,
       "outputs": []
