Made line breaks better

--- a/Just_the_Functions.ipynb
+++ b/Just_the_Functions.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyMaErW+xY/zTh/8kMA0Sbmo",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/MLUISG/Functions/blob/main/Just_the_Functions.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -42,22 +26,24 @@
         "Info, head, tail, done.\"\"\"\n",
         "  print('Info')  \n",
         "  print(df.info())\n",
-        "  print('\\n')\n",
-        "  print('\\n')\n",
+        "  print('\\n\\n')\n",
         "  print('Described')\n",
         "  print(df.describe().T)\n",
-        "  print('\\n')\n",
-        "  print('\\n')\n",
+        "  print('\\n\\n')\n",
         "  print('Head')\n",
         "  print(df.head().T)\n",
-        "  print('\\n')\n",
-        "  print('\\n')\n",
+        "  print('\\n\\n')\n",
         "  print('Tail')\n",
         "  print(df.tail().T)"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "ppmimZgdCsr6"
+      },
+      "outputs": [],
       "source": [
         "def impute_means(df):\n",
         "  \"\"\"Imputes the mean value of a column to all null values in that column\n",
@@ -71,15 +57,15 @@
         "        if pd.api.types.is_numeric_dtype(df[col]):\n",
         "            df[col].fillna(df[col].mean(), inplace=True)\n",
         "  return df"
-      ],
-      "metadata": {
-        "id": "ppmimZgdCsr6"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "w_VVbOzx0vKK"
+      },
+      "outputs": [],
       "source": [
         "def all_the_value_counts(df):\n",
         "    \"\"\"Prints the value counts for all columns in a pandas DataFrame\n",
@@ -91,15 +77,15 @@
         "        print(f\"Value counts for {column}:\")\n",
         "        print(df[column].value_counts())\n",
         "        print(\"\\n\")"
-      ],
-      "metadata": {
-        "id": "w_VVbOzx0vKK"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "nVhq9bRxFmIB"
+      },
+      "outputs": [],
       "source": [
         "def count_the_cats(df):\n",
         "    \"\"\"Prints the value counts for categorical columns in a pandas DataFrame\n",
@@ -112,15 +98,15 @@
         "        print(f\"Value counts for {column}:\")\n",
         "        print(df[column].value_counts())\n",
         "        print(\"\\n\")"
-      ],
-      "metadata": {
-        "id": "nVhq9bRxFmIB"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "oGQPX01X0w6c"
+      },
+      "outputs": [],
       "source": [
         "def count_nulls(data):\n",
         "    \"\"\"Checks for null values and displays only nulls\n",
@@ -132,12 +118,23 @@
         "    filter = temp > 0\n",
         "    print(data.shape)\n",
         "    print(temp[filter])"
-      ],
-      "metadata": {
-        "id": "oGQPX01X0w6c"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyMaErW+xY/zTh/8kMA0Sbmo",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
