Added more functions

--- a/Just_the_Functions.ipynb
+++ b/Just_the_Functions.ipynb
@@ -1,10 +1,26 @@
 {
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "authorship_tag": "ABX9TyPX8nsno4eIua+lKMQIwjxv",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/MLUISG/Functions/blob/main/Just_the_Functions.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -39,11 +55,69 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "def find_tuple_cols(df):\n",
+        "  \"\"\"Identifies tuples in all columns in a dataframe\n",
+        "\n",
+        "Tuple columns sought,\n",
+        "Amidst the data's great breadth,\n",
+        "Found and returned whole.\"\"\"\n",
+        "  tuple_cols = [col for col in df.columns if df[col].apply(lambda x: isinstance(x, tuple)).any()]\n",
+        "  return tuple_cols"
+      ],
       "metadata": {
-        "id": "ppmimZgdCsr6"
+        "id": "CmCKhbhVtThA"
       },
-      "outputs": [],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def convert_tuples_to_lists(df):\n",
+        "  \"\"\"Loops through columns, converting tuples\n",
+        "\n",
+        "From tuples to lists,\n",
+        "DataFrame transformed with ease,\n",
+        "Data now unbound.\"\"\"\n",
+        "  for col in df.columns:\n",
+        "      if type(df[col][0]) == tuple:\n",
+        "          df[col] = df[col].apply(list)\n",
+        "  return df"
+      ],
+      "metadata": {
+        "id": "deKfmQO5tWwG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def remove_outliers(df):\n",
+        "  \"\"\"Removes outliers from all columns in a dataframe\n",
+        "\n",
+        "Outliers expelled,\n",
+        "Data purged of impurities,\n",
+        "Clean and pristine now.\"\"\"\n",
+        "  cleaned_data = df\n",
+        "  for col in df.columns:\n",
+        "      mean = df[col].mean()\n",
+        "      std = df[col].std()\n",
+        "      threshold = 3 * std\n",
+        "      lower_bound = mean - threshold\n",
+        "      upper_bound = mean + threshold\n",
+        "      cleaned_data[col] = df[col][(df[col] > lower_bound) & (df[col] < upper_bound)]\n",
+        "  return cleaned_data"
+      ],
+      "metadata": {
+        "id": "P35gOHNQtb4A"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [
         "def impute_means(df):\n",
         "  \"\"\"Imputes the mean value of a column to all null values in that column\n",
@@ -57,15 +131,15 @@
         "        if pd.api.types.is_numeric_dtype(df[col]):\n",
         "            df[col].fillna(df[col].mean(), inplace=True)\n",
         "  return df"
-      ]
+      ],
+      "metadata": {
+        "id": "ppmimZgdCsr6"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "w_VVbOzx0vKK"
-      },
-      "outputs": [],
       "source": [
         "def all_the_value_counts(df):\n",
         "    \"\"\"Prints the value counts for all columns in a pandas DataFrame\n",
@@ -77,15 +151,15 @@
         "        print(f\"Value counts for {column}:\")\n",
         "        print(df[column].value_counts())\n",
         "        print(\"\\n\")"
-      ]
+      ],
+      "metadata": {
+        "id": "w_VVbOzx0vKK"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "nVhq9bRxFmIB"
-      },
-      "outputs": [],
       "source": [
         "def count_the_cats(df):\n",
         "    \"\"\"Prints the value counts for categorical columns in a pandas DataFrame\n",
@@ -98,15 +172,15 @@
         "        print(f\"Value counts for {column}:\")\n",
         "        print(df[column].value_counts())\n",
         "        print(\"\\n\")"
-      ]
+      ],
+      "metadata": {
+        "id": "nVhq9bRxFmIB"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "oGQPX01X0w6c"
-      },
-      "outputs": [],
       "source": [
         "def count_nulls(data):\n",
         "    \"\"\"Checks for null values and displays only nulls\n",
@@ -118,23 +192,12 @@
         "    filter = temp > 0\n",
         "    print(data.shape)\n",
         "    print(temp[filter])"
-      ]
+      ],
+      "metadata": {
+        "id": "oGQPX01X0w6c"
+      },
+      "execution_count": null,
+      "outputs": []
     }
-  ],
-  "metadata": {
-    "colab": {
-      "authorship_tag": "ABX9TyMaErW+xY/zTh/8kMA0Sbmo",
-      "include_colab_link": true,
-      "provenance": []
-    },
-    "kernelspec": {
-      "display_name": "Python 3",
-      "name": "python3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
-  "nbformat": 4,
-  "nbformat_minor": 0
+  ]
 }
