Added new null hunting tools.

--- a/Just_the_Functions.ipynb
+++ b/Just_the_Functions.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPX8nsno4eIua+lKMQIwjxv",
+      "authorship_tag": "ABX9TyM7aYGe1OO4VvIiB+1Qc2q3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -95,7 +95,7 @@
       "cell_type": "code",
       "source": [
         "def remove_outliers(df):\n",
-        "  \"\"\"Removes outliers from all columns in a dataframe\n",
+        "  \"\"\"Removes outliers from all columns in a dataframe with a threshold of 3* STD\n",
         "\n",
         "Outliers expelled,\n",
         "Data purged of impurities,\n",
@@ -195,6 +195,70 @@
       ],
       "metadata": {
         "id": "oGQPX01X0w6c"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def get_sorted_correlations(df):\n",
+        "    corrs = df.corr().round(2).unstack().abs()\n",
+        "    corrs = corrs[corrs < 1]\n",
+        "    return corrs.sort_values(ascending = False)"
+      ],
+      "metadata": {
+        "id": "daRuycI8Ir_I"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def per_nulls(data):\n",
+        "    \"\"\"Checks for null values and displays their percentage.\n",
+        "\n",
+        "Null values lurking,\n",
+        "Percentage uncovered,\n",
+        "Data now refined.\"\"\"\n",
+        "    total = data.isna().sum().sort_values(ascending=False)\n",
+        "    percent = round((data.isna().sum()/data.isna().count()*100), 2).sort_values(ascending=False)\n",
+        "    missing_data = pd.concat([total, percent], axis=1, keys=['Total', 'Percent'])\n",
+        "    missing_data = missing_data[missing_data['Total'] > 0]\n",
+        "    print(\"Missing data percentage:\\n\", missing_data)"
+      ],
+      "metadata": {
+        "id": "DSdf5Jq3JmeY"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def cull_nulls(df, threshold):\n",
+        "    \"\"\"\n",
+        "    Deletes columns from a Pandas DataFrame if they have more null values than the specified threshold.\n",
+        "\n",
+        "    Parameters:\n",
+        "        - df (pandas.DataFrame): the DataFrame to process.\n",
+        "        - threshold (float): the maximum percentage of null values allowed for a column to be kept.\n",
+        "\n",
+        "    Returns:\n",
+        "        - pandas.DataFrame: the processed DataFrame.\n",
+        "\n",
+        "A data grave threat,\n",
+        "Nulls swarm and infect the set,\n",
+        "Cull them, make it clean.\n",
+        "    \"\"\"\n",
+        "    null_counts = df.isnull().sum()\n",
+        "    null_percentages = null_counts / len(df) * 100\n",
+        "    to_drop = null_percentages[null_percentages > threshold].index\n",
+        "    return df.drop(to_drop, axis=1)"
+      ],
+      "metadata": {
+        "id": "SqSbRe9HO80L"
       },
       "execution_count": null,
       "outputs": []
