--- a/Just_the_Functions.ipynb
+++ b/Just_the_Functions.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM7aYGe1OO4VvIiB+1Qc2q3",
+      "authorship_tag": "ABX9TyOD6pNn+USJ2IYF3bF8sZqf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,11 +36,11 @@
       "source": [
         "def show_me(df):\n",
         "  \"\"\"Displays info, describe, head, and tail\n",
-        "  \n",
+        "\n",
         "Money in the bank,\n",
         "Show me the stats and details,\n",
         "Info, head, tail, done.\"\"\"\n",
-        "  print('Info')  \n",
+        "  print('Info')\n",
         "  print(df.info())\n",
         "  print('\\n\\n')\n",
         "  print('Described')\n",
@@ -52,6 +52,32 @@
         "  print('Tail')\n",
         "  print(df.tail().T)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def split_df_by_dtype(df):\n",
+        "    \"\"\"\n",
+        "    Splits a Pandas DataFrame into two separate DataFrames:\n",
+        "    one for columns with object dtype, and another for columns with non-object dtype.\n",
+        "\n",
+        "    Parameters:\n",
+        "        - df (pandas.DataFrame): The DataFrame to split.\n",
+        "\n",
+        "    Returns:\n",
+        "        - (pandas.DataFrame, pandas.DataFrame): A tuple containing two DataFrames:\n",
+        "            1. The DataFrame containing the object columns.\n",
+        "            2. The DataFrame containing the non-object columns.\n",
+        "    \"\"\"\n",
+        "    object_cols = df.select_dtypes(include='object')\n",
+        "    non_object_cols = df.select_dtypes(exclude='object')\n",
+        "    return object_cols, non_object_cols"
+      ],
+      "metadata": {
+        "id": "mczbNPR-gXN-"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -121,7 +147,7 @@
       "source": [
         "def impute_means(df):\n",
         "  \"\"\"Imputes the mean value of a column to all null values in that column\n",
-        "  \n",
+        "\n",
         "Missing values found,\n",
         "Impute means to numeric cols,\n",
         "Clean data once more.\"\"\"\n",
@@ -143,7 +169,7 @@
       "source": [
         "def all_the_value_counts(df):\n",
         "    \"\"\"Prints the value counts for all columns in a pandas DataFrame\n",
-        "    \n",
+        "\n",
         "Counting values wide,\n",
         "All columns, one by one revealed,\n",
         "Insight to be found.\"\"\"\n",
@@ -163,7 +189,7 @@
       "source": [
         "def count_the_cats(df):\n",
         "    \"\"\"Prints the value counts for categorical columns in a pandas DataFrame\n",
-        "    \n",
+        "\n",
         "Meow, count the cats,\n",
         "Categorical values,\n",
         "Pandas purrs content.\n",
@@ -184,7 +210,7 @@
       "source": [
         "def count_nulls(data):\n",
         "    \"\"\"Checks for null values and displays only nulls\n",
-        "    \n",
+        "\n",
         "Null values abound,\n",
         "Display them with a function,\n",
         "Data cleaning done.\"\"\"\n",
@@ -231,7 +257,7 @@
       "metadata": {
         "id": "DSdf5Jq3JmeY"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -259,6 +285,52 @@
       ],
       "metadata": {
         "id": "SqSbRe9HO80L"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def forest_features(df, target):\n",
+        "  \"\"\"\n",
+        "  This function uses random forest regression to predict a target variable from a given pandas DataFrame.\n",
+        "It splits the data into training and testing sets, trains a random forest regressor model on the training set,\n",
+        "and calculates the root mean squared error on the testing set. This process is repeated multiple times to\n",
+        "calculate the mean RMSE. The function also plots the feature importance in descending order to\n",
+        "provide insights into which features are most important for the model's predictions\n",
+        "\n",
+        "Random forest grows,\n",
+        "Predicting with learned powers,\n",
+        "Features, insights flow.\n",
+        "  \"\"\"\n",
+        "  X = df.drop(target, axis = 1)\n",
+        "  y = df[target]\n",
+        "  numLoops = 1\n",
+        "\n",
+        "  mean_error = np.zeros(numLoops)\n",
+        "  np.random.seed(42)\n",
+        "  for idx in range(0,numLoops):\n",
+        "    X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.2)\n",
+        "    model = RandomForestRegressor(n_estimators = 10, random_state=0)\n",
+        "    model.fit(X_train,y_train)\n",
+        "    y_pred = model.predict(X_test)\n",
+        "    mean_error[idx] = mean_squared_error(y_test, y_pred)\n",
+        "\n",
+        "  print(f'RMSE: {np.sqrt(mean_error).mean()}')\n",
+        "  np.sqrt(mean_error)[:50]\n",
+        "\n",
+        "  importances = model.feature_importances_\n",
+        "  importances\n",
+        "  forest_importances = pd.Series(importances, index=X.columns)\n",
+        "  forest_importances.sort_values(ascending=False, inplace=True)\n",
+        "  plt.figure()\n",
+        "  forest_importances.plot.bar()\n",
+        "  plt.title(\"Feature importance\")\n",
+        "  plt.ylabel(\"Mean decrease in impurity\")"
+      ],
+      "metadata": {
+        "id": "eEu5oFVPPRaO"
       },
       "execution_count": null,
       "outputs": []
